--- a/asteroids/lib/index.html
+++ b/asteroids/lib/index.html
@@ -1,5 +1,16 @@
 <canvas id="canvas" height=600 width=600></canvas>
+<script src="./keymaster.js" type="text/javascript"></script>
 <script src="./utils.js" type="text/javascript"></script>
 <script src="./movingObject.js" type="text/javascript"></script>
 <script src="./asteroid.js" type="text/javascript"></script>
+<script src="./ship.js" type="text/javascript"></script>
 <script src="./game.js" type="text/javascript"></script>
+<script src="./gameView.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+  var canvas = document.getElementById("canvas")
+  var ctx = canvas.getContext("2d");
+  var game = new Asteroids.Game();
+  var gameView = new Asteroids.GameView(game, ctx);
+  gameView.start();
+</script>
