--- a/asteroids/lib/index.html
+++ b/asteroids/lib/index.html
@@ -4,6 +4,7 @@
 <script src="./movingObject.js" type="text/javascript"></script>
 <script src="./asteroid.js" type="text/javascript"></script>
 <script src="./ship.js" type="text/javascript"></script>
+<script src="./bullet.js" type="text/javascript"></script>
 <script src="./game.js" type="text/javascript"></script>
 <script src="./gameView.js" type="text/javascript"></script>
 
