--- a/asteroids/lib/index.html
+++ b/asteroids/lib/index.html
@@ -8,10 +8,18 @@
 <script src="./game.js" type="text/javascript"></script>
 <script src="./gameView.js" type="text/javascript"></script>
 
+
 <script type="text/javascript">
   var canvas = document.getElementById("canvas")
   var ctx = canvas.getContext("2d");
-  var game = new Asteroids.Game();
+  ctx.canvas.width = window.innerWidth - 50;
+  ctx.canvas.height = window.innerHeight - 50;
+  var img = new Image();
+  img.onload = function () {
+    ctx.drawImage(img, 0, 0, ctx.canvas.width, ctx.canvas.height);
+  };
+  img.src = "./starsBackground.jpg";
+  var game = new Asteroids.Game(ctx.canvas.width, ctx.canvas.height);
   var gameView = new Asteroids.GameView(game, ctx);
-  gameView.start();
+  gameView.start(img);
 </script>
